[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yk_visualization"
version = "0.1.0"
description = "Utilities for visualizing bounding boxes, segmentation masks, depth maps, points, and image grids, plus video/frame conversion tools."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "Pillow",
    "matplotlib",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/ykwongaq/Visualization"

[tool.setuptools.packages.find]
where = ["."]
include = ["yk_visualization*"]

[tool.setuptools.package-data]
"yk_visualization.image_grids" = ["config.json"]
