[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yk_visualization"
version = "0.2.1"
description = "Utilities for visualizing bounding boxes, segmentation masks, depth maps, points, and image grids, plus video/frame conversion tools."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "opencv-python",
    "Pillow",
    "matplotlib>=3.9",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/ykwongaq/Visualization"

[tool.setuptools.packages.find]
where = ["."]
include = ["yk_visualization*"]

